Jump Start Changelog
====================

2.1.8 - XX/XX/XXXX
------------------

* **Updated Theme Blvd framework to 2.6.7**
* Fixed: WooCommerce floating shopping cart "View Cart" and "Checkout" buttons not lining up.
* Fixed: On Entrepreneur base, when selecting Title + Tagline for logo display in theme options, tagline wasn't displaying.

--------------------------------------------------------------

2.1.7 - 04/14/2017
------------------

* **Updated Theme Blvd framework to 2.6.6**
* Improvement: Better support for aligning quotes left/right with quote format posts.
* Fixed: Shortcode parameters not getting passed properly to WooCommerce shortcodes after 2.1.6 theme update.
* Fixed: WooCommerce cart widget buttons not sitting properly inline.

--------------------------------------------------------------

2.1.6 - 04/10/2017
------------------

* **Updated Theme Blvd framework to 2.6.5**
* WooCommerce v3 compatibility.
	* New: Implemented new product gallery features, only available in WooCommerce v3+.
	* New: Added option to disable new product gallery zoom feature at *Appearance > Theme Options > Plugins > WooCommerce > Product Gallery Zoom*.
	* Improvement: On product pages, gallery and content now displayed at 50% width each; this better suites new gallery features.
	* Fixed: Spacing on buttons in shopping cart widget.
	* Fixed: Product titles on shop view too large.
	* Fixed: Star ratings no longer showing on product thumbnails in shop view.
	* Fixed: Theme's custom shop image sizes, utilizing new WooCommerce v3+ filters.
	* Fixed: Mobile view not using matching shopping-basket icon (you must clear your browser cache for new icon to show).
	* Removed: Removed theme's Magnific Popup for product thumbnails, in favor of WooCommerce's new native lightbox.
	* **Important:** For best results with this theme update and WooCommerce 3.0+, [regenerate your thumbnails](https://wordpress.org/plugins/regenerate-thumbnails/).