@@ -919,6 +919,7 @@ article.page,
 .tb-related-posts,
 .products.upsells,
 .products.related,
+.cross-sells,
 .tb-info-box,
 .search-page,
 .post_list.archive-loop .post-wrap,
