@@ -6,6 +6,7 @@ Jump Start Changelog
 
 * **Updated Theme Blvd framework to 2.6.7**
 * Fixed: WooCommerce floating shopping cart "View Cart" and "Checkout" buttons not lining up.
+* Fixed: WoCommerce cross-sells not showing when enabled from Theme Options (and using WooCommerce 3.0+).
 * Fixed: On Entrepreneur base, when selecting Title + Tagline for logo display in theme options, tagline wasn't displaying.
 
 --------------------------------------------------------------
